code working locally

--- a/.env
+++ b/.env
@@ -1,8 +1,5 @@
-AUTH0_DOMAIN='your-auth0-domain'
-API_AUDIENCE='your-api-audience'
-DATABASE_URL='postgresql://localhost:5432/castingagency'
+AUTH0_DOMAIN='dev-ezf5gpdg4us031ha.us.auth0.com'  
+API_AUDIENCE='https://casting-agency-api'         
+DATABASE_URL='postgresql://localhost:5432/castingagency'  
 FLASK_APP=app.app
 FLASK_ENV=development
-
-
-
