--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 alembic==1.14.0
 attrs==24.3.0
 blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
 click==8.1.8
 coverage==5.5
 ecdsa==0.19.0
@@ -8,6 +10,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.1.1
+idna==3.10
 importlib_metadata==8.5.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
@@ -22,10 +25,12 @@ pyasn1==0.6.1
 pytest==6.2.5
 python-dotenv==0.19.0
 python-jose==3.3.0
+requests==2.32.3
 rsa==4.9
 six==1.17.0
 SQLAlchemy==2.0.36
 toml==0.10.2
 typing_extensions==4.12.2
+urllib3==2.3.0
 Werkzeug==3.1.3
 zipp==3.21.0
