--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==3.1.0
 Flask-Cors==5.0.0
 Flask-Migrate==3.1.0
 Flask-SQLAlchemy==3.1.1
+gunicorn==23.0.0
 idna==3.10
 importlib_metadata==8.5.0
 iniconfig==2.0.0
